--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Kyle Hoekstra Resume</title>
+  </head>
+  
+  <body>
+    <p> This a test</p>
+  </body>
+</html>  
