added name and address

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>Kyle Hoekstra Resume</title>
   </head>
-  
   <body>
-    <p> This a test</p>
+    <h1>Kyle Hoekstra</h1>
+    <h4>1959 Southridge Ave #3 Menomonie, WI 54751</h4>
+    <p> This a test </p>
   </body>
 </html>  
