--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>Kyle Hoekstra</h1>
-    <h4>1959 Southridge Ave #3 Menomonie, WI 54751</h4>
+    <h2>1959 Southridge Ave #3</h2>
+    <h2>Menomonie, WI 54751</h2>
+    <h2>(952)992-0997</h2>
     <p> This a test </p>
   </body>
 </html>  
