--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <h2>1959 Southridge Ave #3</h2>
     <h2>Menomonie, WI 54751</h2>
     <h2>(952)992-0997</h2>
-    <p> This a test </p>
+  <p>
+    <h6>Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment. Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
+    </h6>
+    </p>
+    
   </body>
 </html>  
