--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>(952)992-0997</h2>
   <p>
     <h2>Summary</h2>
-    <h6>Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.</h6>
-    <h6>Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
-    </h6>
+    Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.
+    Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
+    
     </p>
     
   </body>
