--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>(952)992-0997</h2>
   <p>
     <h2>Summary</h2>
-    Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.
+    Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.<br>
     Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
     
     </p>
