--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <h1>Kyle Hoekstra</h1>
     <hr />
     <br>
-    <h2>1959 Southridge Ave #3</h2>
-    <h2>Menomonie, WI 54751</h2>
-    <h2>(952)992-0997</h2>
+    <h2>1959 Southridge Ave #3<br>
+        Menomonie, WI 54751<br>
+        (952)992-0997</h2><br>
   <p>
     <h2>Summary</h2>
     Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.<br>
