--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <h1>Kyle Hoekstra</h1>
     <hr />
     <br>
-    <h2>1959 Southridge Ave #3<br>
+    <h4>1959 Southridge Ave #3<br>
         Menomonie, WI 54751<br>
-        (952)992-0997</h2><br>
+        (952)992-0997</h4>
   <p>
     <h2>Summary</h2>
     Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.<br>
     Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
-    
-    </p>
+  </p>
+  <h2>Experience</h2>
     
   </body>
 </html>  
