--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <body>
     <h1>Kyle Hoekstra</h1>
     <hr />
-    <br>
     <h4>1959 Southridge Ave #3<br>
         Menomonie, WI 54751<br>
         (952)992-0997</h4>
@@ -16,6 +15,10 @@
     Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
   </p>
   <h2>Experience</h2>
+  <h4>Plastic Recyclers Southeast</h4>
+  <h5>Warehouse Supervisor</h5>
+  <h5>March 2015-Present</h5>
+  
     
   </body>
 </html>  
