--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Kyle Hoekstra Resume</title>
+    <Link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <h1>Kyle Hoekstra</h1>
