--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <Link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <div class="header">
+      <h1>Kyle Hoekstra</h1>
    
   <p>
-    Warehouse Supervisor with 11+ years of experience in a manufacturing/warehouse environment.<br>
-    Managed day to day  operations, to include shipping and receiving, training, data entry, inventory control, and logistics.
+   
   </p>
   <h2>Experience</h2>
   <h4>Plastic Recyclers Southeast</h4>
