--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kyle Hoekstra Resume</title>
-    <Link rel="stylesheet" href="style.css"/>
+    <Link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
     <div class="header">
