--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Kyle Hoekstra Resume</title>
-    <Link rel="stylesheet" type="text/css" href="style.css"/>
+    <Link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <div class="header">
-      <h1>Kyle Hoekstra</h1>
+      <h1>Kyle R Hoekstra</h1>
     </div>
   </body>
 </html>  
