--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <div class="header">
       <h1>Kyle Hoekstra</h1>
-      <p>1959 Southridge Ave #3<br>
-        Menomonie, WI 54751 <br/>
-        (952)992-0997
+      <p><strong>1959 Southridge Ave #3<br>
+        Menomonie, WI 54751 <br>
+        (952)992-0997</strong>
       </p>
     </div>
   </body>
