--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>Kyle Hoekstra</h1>
       <p><strong>1959 Southridge Ave #3<br>
         Menomonie, WI 54751 <br>
-        <em>cell</em>(952)992-0997</strong>
+        <em>cell:</em>952.992.0997</strong>
       </p>
     </div>
   </body>
