--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         952.992.0997</strong>
       </p>
     </div>
+    <div class="summary"
+         <h1>Summary</h1>
+  <p></p>
+         </div>
     
     <div class="employment">
       <h2>Plastic Recyclers Southeast</h2>
