--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         952.992.0997</strong>
       </p>
     </div>
-    <div class="summary"
+    <div class="summary">
          <h1>Summary</h1>
   <p></p>
          </div>
