--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li>Inventory Management</li>
             <li>Inventory Control</li>
             <li>Data Entry</li>
-            <Train Employees</li>
+            <li>Train Employees</li>
+        </ul>
+        
       
     </div>
     <div class="education"
