--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </p>
     </div>
     
-    <div class="summary"
+    <div class="summary">
          <h1>Summary<h1>
          </div>
     
