--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <h2>American Fish and Seafood</h2>
       <h3>July 2014-January 2015</h3>
       <ul>
-        <li>Pick, pack, and ship orders</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Organize and mantain inventories</li>
+        <li>Forklift Operator</li>
+        <li>Quality Control</li>
+        <li>Shipping and Receiving</li>
+        <li>Processing and packaging of goods</li>
       </ul>
         
      
