--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       <h4>March 2007-January 2014</h4>
       <p>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Forklift Operator</li>
+        <li>Shipping and Receiving</li>
+        <li>Logistics</li>
+        <li>Inventory Control</li>
+        <li>Data Entry</li>
       </ul>
       </p>
         
