--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="Employment">
       <h2>Employment</h2>
       <hr>
-      <h3>Plastic Recyclers Southeast</h3>
+      <h3>Plastic Recyclers Southeast<br>
+      Warehouse Soervisor</h3>
       <h4>March 2015-Present</h4>
         <p>
           <ul>
@@ -37,7 +38,8 @@
             <li>Train Employees</li>
         </ul>
       </p>
-        <h3>American Fish and Seafood</h3>
+        <h3>American Fish and Seafood<br>
+           Material Handler</h3>
       <h4>July 2014-January 2015</h4>
          <p>
       <ul>
@@ -48,7 +50,8 @@
         <li>Processing and packaging of goods</li>
       </ul>
          </p>
-      <h3>Control Techniques</h3>
+      <h3>Control Techniques<br>
+      Warehouse associate</h3>
       <h4>March 2007-January 2014</h4>
           <p>
       <ul>
