--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>Employment</h2>
       <hr>
       <h3>Plastic Recyclers Southeast<br>
-      Warehouse Soervisor</h3>
+      Warehouse Supervisor</h3>
       <h4>March 2015-Present</h4>
         <p>
           <ul>
