--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <hr>
       <p><strong>1959 Southridge Ave #3<br>
         Menomonie, WI 54751 <br>
-        952.992.0997</strong>
+        952.992.0997
+        khoek6120@gmail.com</strong>
       </p>
     </div>
     
