--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <div class="Employment">
       <h2>Employment</h2>
       <hr>
-      <h3>Plastic Recyclers Southeast<br>
-      Warehouse Supervisor</h3>
+      <h3>Plastic Recyclers Southeast - Warehouse Supervisor</h3>
       <h4>March 2015-Present</h4>
         <p>
           <ul>
@@ -40,8 +39,7 @@
             <li>Train Employees</li>
         </ul>
       </p>
-        <h3>American Fish and Seafood<br>
-           Material Handler</h3>
+        <h3>American Fish and Seafood - Material Handler</h3>
       <h4>July 2014-January 2015</h4>
          <p>
       <ul>
@@ -52,8 +50,7 @@
         <li>Processing and packaging of goods</li>
       </ul>
          </p>
-      <h3>Control Techniques<br>
-      Warehouse associate</h3>
+      <h3>Control Techniques - Warehouse associate</h3>
       <h4>March 2007-January 2014</h4>
           <p>
       <ul>
