--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li>Processing and packaging of goods</li>
       </ul>
          </p>
-      <h3>Control Techniques - Warehouse associate</h3>
+      <h3>Control Techniques - Warehouse Associate</h3>
       <h4>March 2007-January 2014</h4>
           <p>
       <ul>
