--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p><strong>1959 Southridge Ave #3<br>
         Menomonie, WI 54751 <br>
         952.992.0997<br>
-        <a href="mailto:khoek6120@gmail.com"khoek6120@gmail.com/></strong><a/>
+        <a href="mailto:khoek6120@gmail.com">khoek6120@gmail.com</strong><a/>
       </p>
     </div>
     
