--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
          <p>
       <ul>
         <li>Organize and mantain inventories</li>
-        <li>Operated various types of equipment</li>
-        <li>Quality Control</li>
-        <li>Shipping and Receiving</li>
-        <li>Processing and packaging of goods</li>
+        <li>Generated appropriate forms and documents for customers</li>
+        <li>Insured that the product was of the highest quality</li>
+        <li>Routed incoming shipments to the proper department</li>
+        <li>Worked efficiently in the processing and packaging of goods</li>
       </ul>
          </p>
       <h3>Control Techniques - Warehouse Associate</h3>
@@ -71,6 +71,7 @@
         <h2>Education</h2>
         <hr>
         <h3>Minnetonka Senior High School</h3
+        <h2>High School Diploma - 2000</h2>
           
     </div>
     
