--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <div class="education">
       <h2>Education</h2>
         
-      <h3>Minnetonka Senior High School</h3
+      <h3>Minnetonka Senior High School</h3>
+    </div>
       <h2>High School Diploma - 2000</h2>
           
-    </div>
   </body>
 </html>
